{{$NEXT}}

0.4.17  2021-10-14T11:50:40+13:00
  - Fix handling of /G entry in PDF::Mask. It references an XObject Form
    with a /Group transparency group entry, rather than a transparency group
  - remove catalog /OpenAction entry in pdf-burst.raku; to avoid secondary
    page references

0.4.16  2021-10-09T09:33:31+13:00
  - Use PDF::Content v0.5.7+ PDF::Content::Canvas role for composing
    XObject Form and Tiling Pattern classes
  - Replace canvas(&code) with html-canvas(&code) in pdf-canvas.t
    as deprecated in PDF::Content v0.5.8+

0.4.15  2021-08-07T06:53:26+12:00
  - fixed type checks for Type0 font /Encoding entry and Mask /G
    (transparency-group) entry.
  - fixed #19 /Resources entry placement by removing initialization of
    /ProcSet[ /PDF /Text ]. This is marked obsolete in ISO-32000. It's
    purpose is/was to support conversion to PostScript in older drivers.

0.4.14  2021-07-09T09:10:33+12:00
  - fix stream decoding in PDF::Function::Sampled
  - fix pdf-font.t for PDF::Content v0.5.4+

0.4.13  2021-04-15T11:04:33+12:00
  - rename method calls .perl -> .raku
  - fix test for pending Rakudo 2021.04

0.4.12  2021-03-25T13:24:49+13:00
  - Fix tests for PDF::Content v0.5.0+. core-font() now returns a
    PDF::Content::FontObj object.

0.4.11  2021-02-11T15:36:59+13:00
  - Fix PDF::ColorSpace coercement of [/Pattern]
  - Fix PDF::Function::Sampled handling of uncompressed stream data

Release 0.4.10
- Rename of PDF::Reader -> PDF::IO::Reader and PDF::Writer -> PDF::IO::Writer
 in PDF v0.4.5

Release 0.4.9
- Add external PDF::MarkInfo role.

Release 0.4.8
- Use COS COERCE() method, introduced with PDF 0.4.4+ coercion semantics.
- Fix invalid pdf-function-sampled.t stream /Length test.

Release 0.4.7
- Change PDF::Function::Postscript calc() return value from Seq to Array - for
  consistency with other function types.
- Fix Font::Descriptor::CID, broken in last release (PDF::Tags issue #4)

Release 0.4.6