@@ -325,7 +325,7 @@ been mined from the PDF 32000 specification, e.g. ISO_32000::Table_28-Entries_in
 Class | Types | Accessors | Methods | Description | ISO-32000 References
 ------|-------|-----------|---------|-------------|----------
 PDF::Class | dict | Encrypt, ID, Info, Prev, Root(catalog), Size | Blob, Pages, ast, crypt, encrypt, open, permitted, save-as, update, version | PDF entry-point. either a trailer dict or an XRef stream | Table_15-Entries_in_the_file_trailer_dictionary
-PDF::Catalog | dict | AA(additional-actions), AcroForm, Collection, Dests, Extensions, Lang, Legal, MarkInfo, Metadata, Names, NeedsRendering, OCProperties, OpenAction, Outlines, OutputIntents, PageLabels, PageLayout, PageMode, Pages, Perms, PieceInfo, Requirements, Resources, SpiderInfo, StructTreeRoot, Threads, Type, URI, Version, ViewerPreferences | core-font, find-resource, images, resource-entry, resource-key, use-font, use-resource | /Type /Catalog - usually the document root in a PDF See [PDF 32000 Section 7.7.2 Document Catalog] | Table_28-Entries_in_the_catalog_dictionary
+PDF::Catalog | dict | AA(additional-actions), AcroForm, Collection, Dests(destinations), Extensions, Lang, Legal, MarkInfo, Metadata, Names, NeedsRendering, OCProperties, OpenAction, Outlines, OutputIntents, PageLabels, PageLayout, PageMode, Pages, Perms, PieceInfo, Requirements, Resources, SpiderInfo, StructTreeRoot, Threads, Type, URI, Version, ViewerPreferences | core-font, find-resource, images, resource-entry, resource-key, use-font, use-resource | /Type /Catalog - usually the document root in a PDF See [PDF 32000 Section 7.7.2 Document Catalog] | Table_28-Entries_in_the_catalog_dictionary
 PDF::Catalog::AdditionalActions | dict | DP(did-print), DS(did-save), WC(will-close), WP(will-print), WS(will-save) |  |  | Table_197-Entries_in_the_document_catalogs_additional-actions_dictionary
 PDF::AcroForm | dict | CO(calculation-order), DA(default-appearance), DR(default-resources), Fields, NeedAppearances, Q(quadding), SigFlags, XFA | fields, fields-hash |  | Table_218-Entries_in_the_interactive_form_dictionary
 PDF::Action::GoTo | dict | D(destination), Next, S, Type |  | /Action Subtype - GoTo | Table_199-Additional_entries_specific_to_a_go-to_action Table_193-Entries_common_to_all_action_dictionaries
