@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Better named destination support.
 
 0.4.17  2021-10-14T11:50:40+13:00
   - Fix handling of /G entry in PDF::Mask. It references an XObject Form
